Final Commit for HW-Wireframe Assignment

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <header> header </header>
     <nav> nav </nav>
     <br>
-
+<div>
     <section> section
         <article> article
             <br>
@@ -17,7 +17,7 @@
     </section>
 
 <aside> aside </aside>
-<br>
+</div>
 <footer> footer </footer>
 </body>
 </html>
